<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseDir">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <ListView
            android:id="@+id/file_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
        </ListView>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <Button
                android:id="@+id/newdir"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/newdir"/>
            <Button
                android:id="@+id/choosedir"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/choosedir"/>
            <Button
                android:id="@+id/del_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/del"/>
        </LinearLayout>
        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:orientation="vertical">
            <Button
                android:id="@+id/return_btn"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:text="@string/returns"/>
            <Button
                android:id="@+id/up_return"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/up_return"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>